# seedhash

./: .gitattributes  .gitignore  .zenodo.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FIX_GITHUB_ERROR.R  GITHUB_ERROR_EXPLAINED.R  GITHUB_INSTALL.md  INSTALLATION_METHODS.R  JOSS_CHECKLIST.md  JOSS_PREPARATION_SUMMARY.md  PYTHON_TO_R_GUIDE.md  README.md  SAMPLING_METHODS.md  SAMPLING_METHODS_SUMMARY.md  VERIFICATION_REPORT.md  advanced_ml_results.csv  advanced_ml_results.json  check_nb2_detailed.py  check_notebooks.py  create_notebooks.py  experiment_results.csv  experiment_results.json  fix_and_install.R  fix_notebook1.py  fix_notebook2_cell11.py  install_from_github.R  install_from_github_final.R  install_with_pak.R  ml_results.csv  paper.bib  paper.md  pyproject.toml  quick_console_test.R  requirements.txt  test_dl_seeding.py  test_md5_usage.py  test_r_vscode.R  test_sampling_methods.py  verify_all_files.py
Python/: README.md  advanced_ml_results.csv  advanced_ml_results.json  base.py  experiment_results.csv  experiment_results.json  pyproject.toml  requirements.txt  setup.py
R/: .RData  .Rbuildignore  .Rhistory  CRAN_QUICK_START.md  CRAN_SUBMISSION.md  DESCRIPTION  GITHUB_INSTALL_TROUBLESHOOTING.md  INSTALL.md  INSTALL_SOLUTION.md  INTEGER_RANGE_SOLUTION.md  LICENSE  NAMESPACE  NEWS.md  PYTHON_VS_R.md  README.md  README_CRAN.md  README_PACKAGE.md  START_HERE.md  SUBMISSION_STATUS.md  SUBMIT_NOW.md  VSCODE_R_SETUP.md  cran-comments.md  fix_github_pat.R  install_and_test.R  install_package.R  prepare_cran_submission.R  quick_check.R  quick_test_user.R  run_cran_check.R  (+3 more)
(+22 files in other folders)
